syntax = "proto3";

package rs.tauri.devtools.crash;

service CrashReporter {
    rpc WatchCrash(WatchCrashRequest) returns (CrashReport) {}
}

message WatchCrashRequest {}

message CrashReport {
    bytes crashdump = 1;
}
